syntax = "proto3";
package com.example.hub.grpc;

// Structures used in Requests and Responses

message Empty {}

message SKEpochDayPair {
  int32 epochDay = 1;
  bytes sk = 2;
}

// Ping

message PingRequest {
  string content = 1;
}

message PingResponse {
  string content = 1;
}

// GetNewICC

message GetNewICCResponse {
  string icc = 1;
}

message GetNewICCRequest {
  string email = 1;
  string password = 2;
}

message ClaimInfectionRequest {
  bool isDummy = 1;
  string icc = 2;
  repeated SKEpochDayPair sks = 3;
}

// QueryInfectedSKs

message QueryInfectedSKsRequest {
  int64 lastQueryEpoch = 1;
}

message QueryInfectedSKsResponse {
  int64 queryEpoch = 1;
  repeated SKEpochDayPair sks = 3;
}

// Service definition

service HubService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc getNewIcc(GetNewICCRequest) returns (GetNewICCResponse);
  rpc claimInfection(ClaimInfectionRequest) returns (Empty);
  rpc queryInfectedSKs(QueryInfectedSKsRequest) returns (QueryInfectedSKsResponse);
}